Refactor tcp_client Add recieving and parsing packet

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "bytebuffer": "*",
         "log4js": "*",
         "nconf": "*",
-        "enum": "*"
+        "enum": "*",
+        "dissolve": "*"
     }
 }
