--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "log4js": "*",
         "nconf": "*",
         "enum": "*",
-        "dissolve": "*"
+        "dissolve": "*",
+        "sprintfjs": "*"
     }
 }
