Refactoring incoming packet routing New state machine initialization

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "nconf": "*",
         "enum": "*",
         "dissolve": "*",
-        "sprintfjs": "*"
+        "sprintfjs": "*",
+        "machina": "*"
     }
 }
