Refactor socket_interface to proxy. Exclude engines and stm from proxy.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "enum": "*",
         "dissolve": "*",
         "sprintfjs": "*",
-        "machina": "*"
+        "machina": "*",
+        "xml2js": "*",
+        "underscore": "*",
+        "async": "*"
     }
 }
