--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "machina": "*",
         "xml2js": "*",
         "underscore": "*",
-        "async": "*"
+        "async": "*",
+        "when": "*",
+        "long": "*"
     }
 }
