Use lodash instead undescore

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "sprintfjs": "*",
         "machina": "*",
         "xml2js": "*",
-        "underscore": "*",
         "async": "*",
         "when": "*",
-        "long": "*"
+        "long": "*",
+        "lodash": "*"
     }
 }
