Add package msgs

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "xml2js": "*",
         "async": "*",
         "when": "*",
+        "msgs": "*",
         "long": "*",
         "lodash": "*"
     }
